# gpl

./: README.md
acl/2.2.52-r0/acl-2.2.52/: Makefile  configure.ac
alsa-lib/1.1.6-r0/alsa-lib-1.1.6/: configure  configure.ac
alsa-lib/1.1.6-r0/patches/: 0001-Implement-switch-internal-plugin.patch  0002-Fix-crash-pcm.c-920-assert-pcm-status.patch  0003-Report-errors-from-writei-when-they-happen.patch  0004-Use-common-code-for-writing-for-both-null-and-copy.patch  0005-Fix-synchronizing-samples.patch  0006-Implement-channel-map-parsing.patch  0007-Fix-warnings.patch  0008-Remove-updating-flag.patch  0009-Implement-wait_for_avail_min-wait-on-poll-descriptor.patch  0010-Implement-drift-compensator-when-switch-is-set-to-nu.patch  0011-Handle-error-on-when-we-try-to-open-slave-pcm-on-swi.patch  0012-Forward-frames-that-were-processed-when-we-were-open.patch  0013-Fix-use-cases-when-pcm-is-opened-while-switch-is-off.patch  0014-Implement-configurable-software-drift-compensation.patch  0015-Fix-timestamps-returned-from-status-call-when-switch.patch  0016-Refine-sample-rate-to-kernel-supported-values.patch  0017-Fix-bug-when-using-multiple-switches.patch  0018-Implement-underrun-handling.patch  0019-Fix-opening-pcm-while-device-is-busy.patch  0020-Add-rate-option-to-restrict-supported-sample-rates.patch  0021-Dont-drop-buffers-when-pcm-is-opened-in-state-prepar.patch  0022-Add-switch-to-internal-plugins-list.patch  0023-Change-switch-control-from-enumerated-to-boolean.patch  0024-Fix-HW-parameters-refine-when-failed-to-open-PCM.patch  1001-pcm-Add-force_silence-option.patch  1002-Implement-control-fifo-for-GoogleCast.patch  series
attr/2.4.47-r0/attr-2.4.47/: configure.ac
avahi/0.7-r0/: avahi-autoipd.action
base-passwd/3.5.29-r0/base-passwd-3.5.29/: Makefile.in  passwd.master
base-passwd/3.5.29-r0/patches/: series
bash-completion/2.8-r0/bash-completion-2.8/: Makefile.in  configure
bash/3.2.57-r0/bash-3.2.57/: Makefile.in
bash/3.2.57-r0/patches/: series
beo-hh1-dsp-modules/1.0-r4/: Makefile  beo-hh1-dsp.c  beo-hh1-dsp.h
beo-hh1-fep-modules/1.0-r0/: Makefile  beo-ase-dsp.c  beo-ase-fep.c  beo-ase-fephw.c  beo-ase-lsl.c  beo-ase-s47-display.c  beo-ase-s47-misc.c  beo-common-fep.c  beo-hh1-fep.h  beo-hh1-fwupdate.c  beo-hh1-input.c  beo-hh1-leds.c  beo-hh1-misc.c  beo-hh1-power.c  beo-hh1-rtc.c  beo-hh1-tunnel.c
bluez5/5.45-r0/bluez-5.45/: Makefile.plugins  Makefile.tools
bluez5/5.45-r0/patches/: 0001-avrcp-set-interval-for-track-position-callback-to-on.patch  0001-sdp-Fix-Out-of-bounds-heap-read-in-service_search_at.patch  0002-device-add-last-used-timestamp-property.patch  0003-attrib-add-read-blob-function-for-PTS-tests.patch  0004-gatttool-add-option-to-read-blob-in-interactive-mode.patch  0010-gatt-add-support-for-InvalidOffset-error.patch  (+90 more)
busybox/1.29.3-r0/: streamsdk_overrides.cfg
init-ifupdown/1.0-r7/: interfaces
json-sax/1.0-r3/git/: CMakeLists.txt
kmod/25+gitAUTOINC+aca4eca103-r0/: mwifiex.conf
liba52/0.7.4-r4/a52dec-0.7.4/: configure.in
libdbus-c++-libcpp/0.9.0-r0/libdbus-c++-0.9.0/: CMakeLists.txt  configure.ac  dbus-c++-1.pc.in
libdbus-c++-libcpp/0.9.0-r0/libdbus-c++-0.9.0/examples/hal/: hal-listen.cpp
libdbus-c++-libcpp/0.9.0-r0/libdbus-c++-0.9.0/examples/properties/: propsgs-client.cpp  propsgs-client.h
libdbus-c++-libcpp/0.9.0-r0/libdbus-c++-0.9.0/include/dbus-c++/: dispatcher.h  error.h  eventloop-integration.h  eventloop.h  introspection.h  property.h  types.h
libdbus-c++-libcpp/0.9.0-r0/libdbus-c++-0.9.0/src/: dispatcher.cpp  eventloop-integration.cpp  eventloop.cpp  introspection.cpp  message.cpp  object.cpp  pipe.cpp  property.cpp  types.cpp
libdbus-c++-libcpp/0.9.0-r0/libdbus-c++-0.9.0/test/functional/Test1/: TestApp.cpp  TestAppIntro.h  TestAppIntro.xml  TestAppIntroProvider.h
libdbus-c++-libcpp/0.9.0-r0/libdbus-c++-0.9.0/tools/: generate_adaptor.cpp  generate_proxy.cpp  generator_utils.cpp
linux-stream800/4.1-sue049/: defconfig
resample/1.8.1-r0/: CMakeLists.txt
resample/1.8.1-r0/patches/: 0001-format-security-always-call-printf-with-a-format.patch  series
resample/1.8.1-r0/resample-1.8.1/src/: filterkit.c
sysvinit/2.88dsf-r14/: rcS-default
(+2156 files in other folders)
